Overlapping issue Fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,12 +6,11 @@
 }
 .nav__manue-left {
   width: 5rem;
-  height: 326rem;
+  height: 329rem;
   background-color: var(--deep-orange);
 }
 .whole__body {
-  width: 100%;
-
+  width: 95.5%;
   height: 100%;
 }
 @media (max-width: 700px) {
