--- a/src/Component/Feature/Feature.scss
+++ b/src/Component/Feature/Feature.scss
@@ -21,4 +21,6 @@
 }
 .text p {
   color: var(--gray);
+  font-family: 'Open Sans', sans-serif;
+  line-height: 2rem;
 }
