--- a/src/Component/Galary/Galary.scss
+++ b/src/Component/Galary/Galary.scss
@@ -4,9 +4,10 @@
   width: 100%;
   display: grid;
   grid-template: repeat(7, 5vw) / repeat(8, 1fr);
-  gap: 2rem;
-  grid-column: full-start / full-end;
-  padding: 2rem;
+  gap: 1rem;
+  overflow: hidden;
+  padding: 1rem;
+
   &-img {
     width: 100%;
     height: 100%;
