--- a/src/Component/Homes/Homes.scss
+++ b/src/Component/Homes/Homes.scss
@@ -40,6 +40,7 @@
       grid-gap: 2rem;
       align-items: center;
       justify-content: center;
+      font-family: 'Open Sans', sans-serif;
     }
     &-btn {
       text-align: center;
