--- a/src/Component/NavManue/NavManue.scss
+++ b/src/Component/NavManue/NavManue.scss
@@ -5,6 +5,7 @@
     color: var(--white);
     width: 3rem;
     height: 3rem;
+    cursor: pointer;
   }
   &-slider {
     width: 20rem;
@@ -17,21 +18,22 @@
     top: 0;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.8);
     animation: roll 0.2s linear;
+    text-transform: uppercase;
   }
   @keyframes roll {
     0% {
-      transform: translateY(-100%);
+      transform: translateX(-100%);
     }
     100% {
-      transform: translateY(0);
+      transform: translateX(0);
     }
   }
   &-slider span {
     color: var(--white);
     font-size: 1.5rem;
     position: absolute;
-    top: 2%;
-    right: 6%;
+    top: 4%;
+    right: 8%;
     cursor: pointer;
   }
   &-links {
@@ -44,7 +46,7 @@
   &-links a {
     color: var(--white);
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: 0.8rem 0;
     border-bottom: 1px solid #727070;
     padding: 0.2em;
