--- a/src/Component/Story/Story.scss
+++ b/src/Component/Story/Story.scss
@@ -57,5 +57,6 @@
     margin-bottom: 3rem;
     width: 60%;
     line-height: 2rem;
+    font-family: 'Open Sans', sans-serif;
   }
 }
